--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-md navbar-dark">
   <div class="container-fluid">
     <a class="navbar-brand d-flex align-items-center" href="#">
-      <img src="assets/icons/android-chrome-192x192.png" alt="MeTube Logo" height="32" class="me-2">
-      MeTube
+      <img src="assets/icons/android-chrome-192x192.png" alt="Ai Video Logo" height="32" class="me-2">
+      Ai Video
     </a>
     <div class="download-metrics">
       <div class="metric" *ngIf="activeDownloads > 0">
